# rust-ai

./: AGENTS.md  Cargo.toml  README.md  ai-context.md  docker-compose.yml  opencode.json  run.sh
.github/workflows/: ci.yml  opencode.yml
.opencode/commands/: review.md  run.md  test.md
.opencode/skills/nats-pubsub/: SKILL.md
.opencode/skills/rest-api/: SKILL.md
.opencode/skills/rust-basics/: SKILL.md
ai/: architecture.md  rules.md
ai/specs/: nats-pubsub.md  opencode-client.md  rest-api.md
src/: Dockerfile  consumer.rs  main.rs  opencode_service.rs  producer.rs  rest.rs  service.rs
src/nats/: consumer.rs  producer.rs
src/rest/: rest_api.rs
src/service/: opencode_service.rs
