[package]
name = "rust-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.35"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rand = "0.8"
axum = "0.7"
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["http1"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"