[package]
name = "rust-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.35"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rand = "0.8"
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "consumer"
path = "src/nats/consumer.rs"